--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@chainlink/contracts": "^0.4.0",
         "@ethersproject/bignumber": "^5.5.0",
         "@openzeppelin/contracts": "^4.7.3",
+        "@pancakeswap/pancake-swap-lib": "^0.0.4",
         "@pinata/sdk": "^1.1.23",
         "base64-sol": "^1.1.0",
         "dotenv": "^16.0.0",
